--- a/.eslintrc
+++ b/.eslintrc
@@ -70,6 +70,7 @@
     "react/jsx-one-expression-per-line": "off",
     "react/jsx-wrap-multilines": "off",
     "react/destructuring-assignment": "off",
-    "jsx-a11y/control-has-associated-label": "off"
+    "jsx-a11y/control-has-associated-label": "off",
+    "@typescript-eslint/indent": "off",
   }
 }
