--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,6 @@
 {
   "plugins": ["prettier", "@typescript-eslint"],
-  "extends": ["airbnb-typescript", "react-app", "prettier"],
+  "extends": ["airbnb-typescript", "react-app", "react-app/jest", "prettier"],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "project": "./tsconfig.json"
@@ -71,6 +71,6 @@
     "react/jsx-wrap-multilines": "off",
     "react/destructuring-assignment": "off",
     "jsx-a11y/control-has-associated-label": "off",
-    "@typescript-eslint/indent": "off",
+    "@typescript-eslint/indent": "off"
   }
 }
