--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "test-ci": "CI=true react-scripts test --coverage",
     "eject": "react-scripts eject",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx src --color",
-    "format": "prettier --write src/**/*.{ts,tsx,scss,css,json}",
-    "isready": "npm run format && npm run lint && npm run build"
+    "format": "prettier --write src/**/*.{ts,tsx,scss,css,json}"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -38,11 +37,11 @@
       "!src/common/Parallax/index.ts"
     ]
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "husky": {
+    "hooks": {
+      "pre-commit": "CI=true react-scripts test",
+      "pre-push": "CI=true react-scripts test"
+    }
   },
   "browserslist": {
     "production": [
@@ -74,6 +73,7 @@
     "eslint-plugin-prettier": "3.1.4",
     "eslint-plugin-react": "7.21.5",
     "eslint-plugin-react-hooks": "4.2.0",
+    "husky": "^4.3.8",
     "prettier": "2.1.2",
     "prettier-eslint": "11.0.0",
     "prettier-eslint-cli": "5.0.0"
