--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
+    "string-hash": "^1.1.3",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
   },
@@ -57,6 +58,7 @@
   },
   "devDependencies": {
     "@types/classnames": "^2.2.11",
+    "@types/string-hash": "^1.1.1",
     "@typescript-eslint/eslint-plugin": "4.7.0",
     "@typescript-eslint/parser": "4.7.0",
     "babel-eslint": "10.1.0",
